fix conflict plus add some more html to prevent text overlaps

--- a/service-front/web/src/scss/_lpa-ticket-panel.scss
+++ b/service-front/web/src/scss/_lpa-ticket-panel.scss
@@ -4,11 +4,20 @@
     color: govuk-colour('red');
   }
 
-  @include govuk-media-query($from: tablet) {
-    .moj-badge {
-      position: absolute;
-      top: govuk-spacing(4);
-      right: govuk-spacing(4);
+  @include govuk-media-query($from: desktop) {
+
+    .moj-ticket-panel__row {
+      display: flex;
+      justify-content: space-between;
+
+      .lpa-status {
+        text-align: right;
+      }
+
+      .moj-badge {
+        margin-bottom: govuk-spacing(3) !important;
+      }
+
     }
 
     .lpa-account-delete {
@@ -16,6 +25,7 @@
       bottom: govuk-spacing(4);
       right: govuk-spacing(4);
     }
+
   }
 
 }
